Format PDF: Reference of Indirect Object - Merge the former 2 numbers

--- a/FormatPDF/src/org/freeinternals/format/pdf/filter/package.html
+++ b/FormatPDF/src/org/freeinternals/format/pdf/filter/package.html
@@ -10,20 +10,21 @@
 
         <h2>Package Specification</h2>
 
-        PDF 8 basic types of objects.
+        PDF Filters.
 
         <ol>
-            <li>7.3.2 Boolean values</li>
-            <li>7.3.3 Integer and Real numbers</li>
-            <li>7.3.4 Strings</li>
-            <li>7.3.5 Names</li>
-            <li>7.3.6 Arrays</li>
-            <li>7.3.7 Dictionaries</li>
-            <li>7.3.8 Streams</li>
-            <li>7.3.9 <code>null</code> object</li>
+            <li>7.4.2 ASCIIHexDecode Filter</li>
+            <li>7.4.3 ASCII85Decode Filter</li>
+            <li>7.4.4 LZWDecode and FlateDecode Filters</li>
+            <li>7.4.5 RunLengthDecode Filter</li>
+            <li>7.4.6 CCITTFaxDecode Filter</li>
+            <li>7.4.7 JBIG2Decode Filter</li>
+            <li>7.4.8 DCTDecode Filter</li>
+            <li>7.4.9 JPXDecode Filter</li>
+            <li>7.4.10 Crypt Filter</li>
         </ol>
 
-        For details, you may read PDF Reference section <code>7.3</code>.
+        For details, you may read PDF Reference section <code>7.4</code>.
 
         <h2>Related Documentation</h2>
 
